bugzID: 14656 autocomplete on single page curation UI make columns align top for construction zone

--- a/home/css/zfin.css
+++ b/home/css/zfin.css
@@ -1038,3 +1038,7 @@ input + label {
 
 .tooltip-arrow,
 .zfin-tooltip + .tooltip {background-color: transparent; width: 100px; box-decoration-break: clone}
+
+.term-construction-zone-width td:first-child {
+    width: 250px !important;
+}
